<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.patient.activities.ResetPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cL1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp"
        tools:layout_editor_absoluteY="130dp">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/icon_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
             />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cL2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/cL1"
        app:layout_constraintBottom_toBottomOf="parent"


        >



            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center"
                android:text="PATIENT SIGN-UP"
                android:textColor="@color/GreenText"
                android:textSize="20dp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="15dp"
                android:hint="@string/sign_up_with_email"
                app:boxStrokeWidth="2dp"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:layout_constraintBottom_toTopOf="@+id/txtPassword"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
              >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittxtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="15dp"
                app:boxStrokeWidth="2dp"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                android:hint="@string/create_a_password"
                app:layout_constraintBottom_toTopOf="@+id/txtRetypePassword"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
       >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittxtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtRetypePassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="40dp"
                app:boxStrokeWidth="2dp"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                android:hint="@string/re_type_password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/rl1"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittxtReenterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/rl1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="20dp"
                app:boxStrokeWidth="2dp"
                android:background="@drawable/linear_layout_border"
                app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <ImageView
                    android:id="@+id/icon_google"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/icon_google" />

                <TextView
                    android:layout_gravity="center_vertical"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:paddingLeft="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/icon_google"
                    android:hint="@string/sign_up_with_google" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"

                android:layout_marginBottom="100dp"
                android:background="@drawable/round_button_white"
                android:text="@string/sign_up"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/btnSignUp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/by_signing_up_you_accept_our"
                app:layout_constraintTop_toBottomOf="@id/btnSignUp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:gravity="center_horizontal"
                />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>